# FFMpegUtils

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/ctvit/ffmpeg/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: player.c
app/src/main/java/com/ctvit/ffmpeg/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/ctvit/ffmpeg/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
